--- a/index.html
+++ b/index.html
@@ -41,13 +41,26 @@
                 <li>
                     <a  href="#">Costi</a>
                 </li>
-                <li>
-                    <a href="#">Prodotti</a>
+                <li class="li-with-dropdown">
+                    <a  href="#">Prodotti</a>
+                    <!-- Dropdown menu gestito conJQ -->
+                    <div class="dropdown-menu prodotti">
+                        <a class="dropdown-link" href="#">Trasferimenti in denaro
+                        </a>
+                        <a class="dropdown-link" href="#">Assicurazione medica
+                        </a>
+                        <a class="dropdown-link" href="#">Vault
+                        </a>
+                        <a class="dropdown-link" href="#">Assicurazione smartphone
+                        </a>
+                        <a class="dropdown-link" href="#">Criptovaluta
+                        </a>
+                    </div>
                 </li>
                 <li class="li-with-dropdown">
                     <a  href="#">Azienda</a>
                     <!-- Dropdown menu gestito conJQ -->
-                    <div class="dropdown-menu">
+                    <div class="dropdown-menu azienda">
                         <a class="dropdown-link" href="#">Chi siamo
                         </a>
                         <a class="dropdown-link" href="#">Azienda
